update package.json deps and fix theme name

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: FitnessWP 
+Theme Name: Teik Starter
 Theme URI: #
 Author: teikk
 Author URI: https://github.com/teikk/
-Theme URI: https://www.grupataka.pl/
+Theme URI: https://github.com/teikk/2020-starter
 */
